need to fix decription mobile spacing and singlimage resize desc

--- a/react-app/src/components/DeleteImage/DeleteImage.css
+++ b/react-app/src/components/DeleteImage/DeleteImage.css
@@ -4,16 +4,18 @@
   justify-content: center;
   align-items: center;
   position: fixed;
+  text-align: center;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: white;
   border-radius: 10px;
   padding: 20px;
-  padding-left: 5rem;
-  padding-right: 5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 10000;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 .modal button {
