--- a/react-app/src/components/SingleImage/SingleImage.css
+++ b/react-app/src/components/SingleImage/SingleImage.css
@@ -79,6 +79,7 @@
   word-wrap: break-word;
   white-space: pre-wrap;
   word-break: break-word;
+  overflow: scroll;
 }
 
 .owner-link {
